--- a/changePassword.html
+++ b/changePassword.html
@@ -184,12 +184,12 @@
 
     var countPending = 0;
     var badgePending = function(){
-      firebase.database().ref("Elections").on("child_added",function(elecSnap1){
-        firebase.database().ref("Elections").child(elecSnap1.key).on("child_added",function(elecSnap2){
-          if(elecSnap2.val().AdminOnay == false){
+      firebase.database().ref("WaitingElections").on("child_added",function(elecSnap1){
+        firebase.database().ref("WaitingElections").child(elecSnap1.key).on("child_added",function(elecSnap2){
+
             countPending += 1;
             document.getElementById("spanID6").innerHTML = countPending
-          }
+
         });
       });
     }
